--- a/package.json
+++ b/package.json
@@ -34,5 +34,14 @@
     "start": "node app.js",
     "start-trace": "node --trace-warnings app.js",
     "test": "swagger project test"
+  },
+  "overrides": {
+    "form-data": "^4.0.0",
+    "tough-cookie": "^4.1.3",
+    "company-laundry": {
+      "normalize-space": {
+        "jsdom": "^16.7.0"
+      }
+    }
   }
 }
