--- a/package.json
+++ b/package.json
@@ -40,7 +40,12 @@
     "tough-cookie": "^4.1.3",
     "company-laundry": {
       "normalize-space": {
-        "jsdom": "^16.7.0"
+        "jsdom": {
+          "request": {
+            "form-data": "^4.0.0",
+            "tough-cookie": "^4.1.3"
+          }
+        }
       }
     }
   }
