--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
   "overrides": {
     "form-data": "^4.0.0",
     "tough-cookie": "^4.1.3",
+    "qs": "^6.14.1",
     "company-laundry": {
       "normalize-space": {
         "jsdom": {
           "request": {
             "form-data": "^4.0.0",
-            "tough-cookie": "^4.1.3"
+            "tough-cookie": "^4.1.3",
+            "qs": "^6.14.1"
           }
         }
       }
